# hg-twitter-DEPRECATED-

./: .gitignore  pyproject.toml
hg_twitter/: last_seen_id.txt  main.py
hg_twitter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_hg_twitter.py
